<resources>
    <string name="app_name">UniRutas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="routes_title">UniRutas</string>
    <string name="profile_title">Perfil</string>
    <string name="configuration_button">Boton de configuración</string>
    <string name="map_style_config">Estilo del mapa</string>
    <string name="route_view_fixed">Fijar vista en ruta</string>
    <string name="trafic_view_option">Ver flujo del tráfico</string>
    <string name="route_rute_view_option">Visualizar recorrido de la ruta</string>
    <string name="my_location_view">Ver mi ubicación</string>
    <string name="map_configuration_title">Configuración del mapa</string>
    <string name="routes_list_title">Lista de rutas</string>
    <string name="content_desc_bus_icon">Icono de bus</string>
    <string name="content_desc_arrow_down">Flecha abajo</string>
    <string name="content_desc_btn_back">Boton regresar</string>
    <string name="content_desc_profile_picture">Foto de perfil</string>
    <string name="title_carreer">Carrera</string>
    <string-array name="map_types">
        <item>Normal</item>
        <item>Satélite</item>
        <item>Terreno</item>
        <item>Híbrido</item>
    </string-array>
    <string name="love_message">Hecho con ❤️ en La Guajira</string>
</resources>